--- a/package.json
+++ b/package.json
@@ -1,10 +1,7 @@
 {
   "name": "wdio",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
   "scripts": {
-    "test": "wdio"
+    "test:mocha": "cd ./examples/mocha && npm run mocha"
   },
   "keywords": [],
   "author": "",
@@ -12,13 +9,14 @@
   "devDependencies": {
     "@wdio/cli": "5.18.6",
     "@wdio/jasmine-framework": "5.18.6",
-    "@wdio/mocha-framework": "5.18.6",
     "@wdio/local-runner": "5.18.6",
+    "@wdio/mocha-framework": "5.18.6",
     "@wdio/sync": "5.18.6",
+    "chai": "^4.2.0",
     "chromedriver": "79.0.3",
+    "dotenv": "^8.0.0",
     "wdio-chromedriver-service": "5.0.2",
     "wdio-reportportal-reporter": "5.2.4",
-    "wdio-reportportal-service": "5.2.4",
-    "dotenv": "^8.0.0"
+    "wdio-reportportal-service": "5.2.4"
   }
 }
